# easy-flow

./: .env.example  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  CLAUDE_SECURITY_IMPLEMENTATION.md  Dockerfile  GEMINI.md  GITHUB_ISSUES_TEMPLATE.md  Makefile  PROJECT_STRUCTURE_RECOMMENDATIONS.md  README.md  ROADMAP_FULL_IMPLEMENTATION.md  TESTING_GITHUB_ACTIONS.md  TEST_SCENARIOS.md  docker-compose.yml  local_validate.py  main.py  pyproject.toml  requirements.txt  test_phase2_implementation.py  validate_actions.py
.github/: CODEOWNERS  GEMINI_SETUP.md  MIGRATION_GUIDE.md  REFACTORING_COMPLETE.md  WORKFLOWS_REFACTORING.md  claude-config.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  security_issue.yml
.github/actions/setup-github-app/: action.yml
.github/actions/setup-repository/: action.yml
.github/scripts/: claude-monitor.py  claude-security-check.sh
.github/workflows/: ai-assistants.yml  ci-cd.yml  claude-code-review.yml  claude-monitor.yml  claude-recurring.yml  claude-scheduler.yml  claude.yml  code-quality.yml  dependency-management.yml  gemini-backup.yml  gemini-cli.yml  gemini-issue-automated-triage.yml  gemini.yml  issue-management.yml  issue-triage.yml  maintenance.yml  pr-review.yml  security-scan.yml  validate-workflows.yml
.github/workflows_backup/: gemini-backup.yml  gemini-issue-scheduled-triage.yml  gemini-pr-review.yml  gemini.yml
app/: __init__.py
app/adapters/: __init__.py  base.py  security.py
app/adapters/international/: __init__.py  bigcommerce.py  magento.py  shopify.py  woocommerce.py
app/adapters/messaging/: __init__.py  base.py  telegram.py  viber.py  vk.py  whatsapp.py
app/adapters/russian/: __init__.py  bitrix.py  insales.py  ozon.py  wildberries.py
app/adapters/voice/: __init__.py  base.py  yandex_alice.py
app/api/: __init__.py  dependencies.py  main.py
app/api/controllers/: __init__.py  base.py  conversation_controller.py  integration_controller.py  messaging_controller.py  voice_controller.py
app/api/routes/: __init__.py  conversation.py  health.py  integration.py  messaging.py  voice.py
app/core/: __init__.py  config.py
app/integrations/: __init__.py  base.py  bitrix.py  insales.py  manager.py  ozon.py  security.py  wildberries.py
app/models/: __init__.py  conversation.py  database.py  ecommerce.py  integration.py  messaging.py  voice.py
app/repositories/: __init__.py  repository_factory.py
app/repositories/interfaces/: base_repository.py  conversation_repository.py  integration_repository.py  knowledge_base_repository.py  message_repository.py  user_repository.py
app/repositories/sqlalchemy/: conversation_repository.py  integration_repository.py  knowledge_base_repository.py  message_repository.py  user_repository.py
app/services/: __init__.py  ai_service.py  cache_service.py  conversation_service.py  database_service.py  embeddings_service.py  integration_service.py  messaging_service.py  metrics_service.py  nlp_service.py  repository_service.py  service_factory.py  template_service.py  voice_service.py
app/services/ecommerce/: __init__.py  base.py  bigcommerce.py  magento.py  shopify.py  woocommerce.py
app/services/flow/: __init__.py  context.py  flow_service.py
app/services/flow/states/: __init__.py  base.py  hangup.py  hello.py  order.py  payment.py  shipping.py
app/services/nlp/: pattern_recognition.py
docs/: README.md  api.md  architecture.md  configuration.md  contributing.md  deployment.md  monitoring.md  quickstart.md  roadmap.md  security.md  testing.md  workflows-refactoring-recommendations.md
docs/api/: endpoints.md
docs/architecture/: conversation-flow.md  microservices.md  overview.md
docs/business/: market-analysis.md  overview.md  prd.md  user-personas.md  whitepaper.md
docs/deployment/: guide.md
docs/development/: guide.md
docs/integrations/: README.md  ecommerce.md  messaging.md  voice.md
docs/mvp/: features.md  launch-checklist.md  plan.md  roadmap.md
docs/services/conversation_flow/: architecture.md  diagrams.md  overview.md
docs/technical/: api.md  architecture.md  database.md  deployment.md  development.md  integrations.md
scripts/: check_setup.py
tests/: __init__.py  conftest.py  test_ai_service.py  test_api.py  test_cache_service.py  test_conversation_flow.py  test_embeddings_service.py  test_messaging_adapter_base.py  test_messaging_controller.py  test_messaging_service.py  test_nlp_service.py  test_pattern_recognition.py  test_simple.py
